# up-android-core

./: settings.gradle
service/: build.gradle
service/src/main/: AndroidManifest.xml
service/src/main/java/org/eclipse/uprotocol/core/: UCore.java
service/src/main/java/org/eclipse/uprotocol/core/ustreamer/: UStreamer.java  UStreamerManager.java
service/src/main/rust/ustreamer_bridge/: Cargo.toml
service/src/main/rust/ustreamer_bridge/src/: lib.rs
service/src/main/uStreamerGlue/withUStreamer/java/: UStreamerGlue.java
