[package]
name = "ustreamer_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
aidl-rust-codegen = { git = "https://github.com/PLeVasseur/up-client-android-rust.git", branch = "feature/ustreamer-integration-check" }
async-std = "1.12.0"
binder = { git = "https://github.com/PLeVasseur/binder_rs.git", branch = "main" }
binder_ndk_sys = { git = "https://github.com/PLeVasseur/binder_rs.git", branch = "main" }
binder_tokio = { git = "https://github.com/PLeVasseur/binder_rs.git", branch = "main" }
jni = "0.21.1"
once_cell = "1.19.0"
protobuf = { version = "3.3" }
# main
# up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", branch = "main" }
# latest stable supported by up-client-zenoh-rust
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "68c8a1d94f0006daf4ba135c9cbbfddcd793108d" }
up-client-android-rust = { git = "https://github.com/PLeVasseur/up-client-android-rust.git", branch = "feature/ustreamer-integration-check"}
ustreamer = { git = "https://github.com/PLeVasseur/up-streamer-rust.git", branch = "feature/initial-pluggable-ustreamer" }
log = "0.4.20"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
